completed mobile design and fixed navigation stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,15 @@ p {
 .nav-con {
   background-color: #F6F6F6;
   border: 2px solid #F1F1F1;
-  padding-top: 1rem;
+  padding-top: 1.5em;
+  position: fixed;
+  left: 0;
+  right: 0;
+}
+@media ((max-width: 500px)) {
+  .nav-con {
+    background-color: #ffffff;
+  }
 }
 .nav-con .nav-center {
   margin: 0 auto;
@@ -178,6 +186,9 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  left: 0;
+  right: 0;
 }
 .nav-con .nav-center h1 {
   font-size: 3rem;
@@ -216,6 +227,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  padding-top: 10em;
 }
 .home .intro img {
   border-radius: 0.5rem;
@@ -276,11 +290,28 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media ((max-width: 500px)) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 1.5em;
+    margin-top: 2em;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
+@media ((max-width: 500px)) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media ((max-width: 500px)) {
+  .home .walk .walk-text h3 {
+    margin-top: 1em;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -305,9 +336,22 @@ footer {
   cursor: pointer;
   border: 1px solid #23293B;
 }
+@media ((max-width: 500px)) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 1.2em;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media ((max-width: 500px)) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
