--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
 	.intro {
+		padding-top: 10em;
+
 		img {
 			.btn-border-radius();
 
@@ -67,11 +69,25 @@
 		display: flex;
 		justify-content: center;
 
+		@media (@phone) {
+			flex-direction: column-reverse;
+			padding: 1.5em;
+			margin-top: 2em;
+		}
+
 		.walk-text {
 			width: 50%;
 
+			@media (@phone) {
+				width: 100%;
+			}
+
 			h3 {
 				margin-bottom: 10px;
+
+				@media (@phone) {
+					margin-top: 1em;
+				}
 			}
 
 			p {
@@ -89,12 +105,23 @@
 					cursor: pointer;
 					border: 1px solid @ebony-clay;
 				}
+				@media (@phone) {
+					width: 100%;
+					padding: 1.2em;
+				}
+
 			}
 		}
 
 		.walk-img {
 			width: 46%;
 			margin-left: 4%;
+
+			@media (@phone) {
+				width: 100%;
+				margin: 0;
+				padding: 0;
+			}
 
 			img {
 				width: 100%;
