--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,7 +3,18 @@
 .nav-con {
 	background-color: @nav-bg;
 	border: 2px solid @nav-border;
-	padding-top: 1rem;
+	padding-top: 1.5em;
+
+	position: fixed;
+	left: 0;
+	right: 0;
+
+	@media (@phone) {
+		// position: fixed;
+		// left: 0;
+		// right: 0;
+		background-color: lighten(@nav-bg, 100%);
+	}
 
 	.nav-center {
 		margin: 0 auto;
@@ -13,8 +24,14 @@
 		justify-content: center;
 		align-items: center;
 
-		// @media (@phone){
-		// 	max-width: 500px;
+		position: relative;
+		left: 0;
+		right: 0;
+
+		// @media (@phone) {
+		// 	position: relative;
+		// 	left: 0;
+		// 	right: 0;
 		// }
 
 		h1 {
